drag and drop bugs fixed and vertical scrollbars hidden

--- a/style/standard.css
+++ b/style/standard.css
@@ -4,8 +4,8 @@
 }
 
 ::-webkit-scrollbar {
-    width: 8px;
-    height: 8px;
+    width: 0px;
+    height: 0px;
 }
 
 ::-webkit-scrollbar-corner {
@@ -31,7 +31,7 @@
     font-family: 'Inter';
     margin: 0;
     box-sizing: border-box;
-    scroll-behavior: smooth;
+    scroll-behavior: smooth; 
 }
 
 html {
